# project-tradelunch-blog

./: .gitignore  .npmrc  00.blog-agent-merge.arch.md  00.finance.plan.md  00.finance.tasks.md  00.migration.md  00.plan.md  00.tasks.md  01.status.md  CLAUDE.md  README.md  db-migration-oracle.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  x_00.finance.tasks.md  x_db-migration-oracle.md
.claude/: CLAUDE.md  settings.json
.github/: CRON.md
_scripts/: verify_fee.py  verify_r28.py
apps/stock_collector/: README.md  pyproject.toml  uv.toml
apps/stock_collector/__tests__/: kadoa_filers_sample.json  spec_archive.py  spec_backfill.py  spec_backfill_politician.py  spec_backtest_retention.py  spec_committee_parse.py  spec_event_study.py  spec_figi_fetch.py  spec_fundamentals.py  spec_funds_loader.py  spec_isolated_bars.py  spec_ohlc.py  spec_politician_parse.py  spec_politician_promote.py  spec_rankings_parquet_sink.py  spec_retention.py  spec_run_daily_filter.py  spec_sec_amendment.py  spec_snapshot.py  spec_storage_sink.py  spec_universe.py  spec_universe_resolve.py  spec_watchlist_loader.py
apps/stock_collector/configs/: funds.yaml  watchlist.yaml
apps/stock_collector/src/collector/config/: settings.py  watchlist_loader.py
apps/stock_collector/src/collector/entrypoints/: backfill_politician_trades.py  enrich_committees.py  promote_politician_tickers.py  prune_history.py  prune_holdings.py  prune_rankings.py  run_backfill.py  run_daily.py  run_gex.py  run_monthly.py  run_politician_trades.py  run_security_map.py  run_signal_backtest.py  run_weekly.py  seed_archive.py  upload_archive.py
apps/stock_collector/src/collector/ranking/: fundamentals.py  screen.py
apps/stock_collector/src/collector/schema/: chain_rows.py  rows.py
apps/stock_collector/src/collector/sink/: congress_fetch.py  db_sink.py  figi_fetch.py  gex_sink.py  kadoa_fetch.py  parquet_sink.py  politician_db_sink.py  sec_db_sink.py  sec_fetch.py  sec_parquet_sink.py  storage_sink.py  yahoo_fetch.py
apps/stock_collector/src/collector/transform/: archive.py  lead_lag.py  mapping.py  ohlc.py  politician_parse.py  retention.py  sec_parse.py  sec_reconcile.py  sector_benchmark.py  snapshot.py
apps/stock_collector/src/lib/: constants.py  logger.py  rate_limit.py  read_all_tickers.py
apps/stock_collector/src/stock_collector.egg-info/: SOURCES.txt
doc_history/: 00.blog-agent-merge.plan.md  00.blog-agent-merge.tasks.md  00.plan.md  00.tasks.md
docs/: doc.nextjs.api.actions.md  guide.code.convention.md  guide.spec.md  (+1 more)
prompts/: prompt.md
(+1229 files in other folders)
