[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-collector"
version = "0.1.0"
description = "Yahoo OHLC daily collector + market-cap ranking for the tradelunch dashboard (market_snapshots/market_history)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "yfinance>=0.2.50",
    "curl_cffi>=0.7",
    "psycopg[binary]>=3.2",
    "PyYAML>=6.0",
    "pyarrow>=16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lib*", "yahoo_client*", "collector*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
# Pure transform/ranking modules are stdlib-only, so spec_* run without network.
pythonpath = ["src"]
testpaths = ["__tests__"]
python_files = ["spec_*.py"]
addopts = ["-v", "--disable-warnings"]

[tool.black]
line-length = 88
target-version = ['py312']
